[gd_scene load_steps=3 format=3 uid="uid://nbdx8nbld3td"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_4vm6h"]
[ext_resource type="Texture2D" uid="uid://bdvumesih706" path="res://sprites/BG/BG_test.png" id="1_6h75b"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vm6h")

[node name="Container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BattleBG" type="TextureRect" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_6h75b")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="BattleField" type="MarginContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommandPanel" type="PanelContainer" parent="Container/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer/CommandPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="title" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Turns:
"

[node name="1" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "1"

[node name="2" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.804743, 0.804743, 0.804742, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "2"

[node name="3" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.470076, 0.470076, 0.470076, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "3"

[node name="CommandButtons" type="MarginContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons"]
layout_mode = 2

[node name="attack" type="Button" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Attack"

[node name="items" type="Button" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Items"

[node name="flee" type="Button" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Flee"

[node name="StatPanel" type="MarginContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatPanel" type="VBoxContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel"]
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="Player1" type="HBoxContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player1"]
layout_mode = 2
text = "name 1"

[node name="HP" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player1"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP: "
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player1"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="Player2" type="HBoxContainer" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player2"]
layout_mode = 2
text = "name 2"

[node name="HP" type="Label" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player2"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP: "
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="Container/VBoxContainer/CommandPanel/HBoxContainer/StatPanel/StatPanel/Player2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Enemielife" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 50.0
show_percentage = false

[node name="HP" type="Label" parent="Enemielife"]
layout_direction = 2
layout_mode = 0
offset_right = 96.0
offset_bottom = 17.0
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextBox" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Label" type="Label" parent="TextBox"]
layout_mode = 2
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 1
justification_flags = 161
metadata/_edit_lock_ = true

[connection signal="pressed" from="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons/VBoxContainer/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/CommandPanel/HBoxContainer/CommandButtons/VBoxContainer/flee" to="." method="_on_flee_pressed"]
